--- a/lms-frontend/src/components/ProfileSettings/ProfileSettings.module.css
+++ b/lms-frontend/src/components/ProfileSettings/ProfileSettings.module.css
@@ -35,7 +35,7 @@
 
 .photoLabel {
   display: inline-block;
-  background: #4e79a7;
+  background: #644191;
   color: #fff;
   padding: 0.5rem 1rem;
   border-radius: 4px;
@@ -70,7 +70,7 @@ input[type="password"] {
 
 .saveBtn {
   width: max-content;
-  background: #4e79a7;
+  background: #644191; /* Changed from #4e79a7 */
   color: #fff;
   padding: 0.6rem 1.2rem;
   border: none;
@@ -81,7 +81,7 @@ input[type="password"] {
 }
 
 .saveBtn:hover {
-  background: #3b5a82;
+  background: #7a4fb3; /* Changed from #3b5a82 */
 }
 
 .loading {
